traefik/traefik.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: traefik
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik
  labels:
    com.example/service.name: traefik
spec:
  selector:
    matchLabels:
      com.example/service.name: traefik
  template:
    metadata:
      labels:
        com.example/service.name: traefik
    spec:
      serviceAccountName: traefik
      containers:
      - name: traefik
        image: traefik:v2.2.7
        args:
        - --log.level=INFO
        - --entrypoints.http.address=:80
        - --entrypoints.https.address=:443
        - --providers.kubernetesingress
        - --providers.kubernetesingress.ingressendpoint.ip=0.0.0.0
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
      nodeSelector:
        com.example/node.ingress: "true"
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    com.example/service.name: traefik
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  - protocol: TCP
    port: 443
    name: https
    targetPort: 443
