traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: 10.86.62.31.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik
            port: 
              number: 443
  tls:
    - hosts:
      - 10.86.62.31.sslip.io
      secretName: letsencrypt-prod
